[package]
name = "alumini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bitflags = "1.3.2"
log = "0.4.17"
mmap = "0.1.1"
nix = "0.26.2"
nom = "7.1.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
page_size = "0.5.0"
pretty_env_logger = "0.4.0"
x86 = "0.52.0"
